trunk/Archive2/04/687f45d8f795de/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread -o main main.cpp
main.cpp:7:18: error: excess elements in struct initializer
        std::tuple<> u{ std::move(t) };
                        ^~~~~~~~~~~~
1 error generated.
